Final trust alignment issue fixed.

--- a/toolbox/less/index.less
+++ b/toolbox/less/index.less
@@ -354,7 +354,15 @@ body
                 }
             }
         }
+    
+        img
+        {
+            float               : right;        
+        }
+    
     }
+    
+
     
     // This is the price tag currently at the bottom of tools and services items
     .price
